brute force update domain name

--- a/how_is_this_free.html
+++ b/how_is_this_free.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
     <meta name="author" content="Gian Hofmann, Tom Sommerfeld"/>
     <meta name="copyright" content="© 2023 Gian Hofmann, Tom Sommerfeld"/>
-  <title>studym8ai.app/how_is_this_free</title>
+  <title>dfuh18.github.io/how_is_this_free</title>
   <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.webp"/>
   <!-- Link to Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -82,7 +82,7 @@
                             We understand the importance of data protection and privacy, and we want to assure you that we do not collect or share any user data other than to analyse the website performance. We appreciate your understanding and look forward to helping you study.
                         
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                            <button type="button" class="btn btn-secondary btn-lg px-4 gap-3" onclick="window.open('https://studym8ai.app/download.html', '_self').focus()">Download</button>
+                            <button type="button" class="btn btn-secondary btn-lg px-4 gap-3" onclick="window.open('https://dfuh18.github.io/download.html', '_self').focus()">Download</button>
                             <button type="button" class="btn btn-outline-secondary btn-lg px-4" onclick="window.open('https://openai.com/about/', '_blank').focus()">Learn more about OpenAI</button>
                         </div>
                     </div>
@@ -97,16 +97,16 @@
              <i id="blogs-icon" class="fas fa-paragraph fa-2x"></i>
          </button>
           <ul class="dropdown-menu">
-              <li><a class="clean_links" href="https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html">Chat GPT's Introduction to StudyMateAI</a></li>
+              <li><a class="clean_links" href="https://dfuh18.github.io/chat_gpt_introduction_to_studymateai-article.html">Chat GPT's Introduction to StudyMateAI</a></li>
               <li><a class="clean_links" href="/articles/founder_story.html">Founder's Story</a></li>
           </ul>
       </div>
 
 <footer class="py-3 my-4">
     <ul class="nav justify-content-center  pb-3 mb-3">
-      <li class="nav-item"><a href="https://studym8ai.app/" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="https://studym8ai.app/tutorial.html" class="nav-link px-2 text-muted">Tutorial</a></li>
-      <li class="nav-item"><a href="https://studym8ai.app/how_is_this_free.html" class="nav-link px-2 text-muted">Privacy policy</a></li>
+      <li class="nav-item"><a href="https://dfuh18.github.io/" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="https://dfuh18.github.io/tutorial.html" class="nav-link px-2 text-muted">Tutorial</a></li>
+      <li class="nav-item"><a href="https://dfuh18.github.io/how_is_this_free.html" class="nav-link px-2 text-muted">Privacy policy</a></li>
       <li class="nav-item"><a href="https://www.buymeacoffee.com/studyM8" class="nav-link px-2 text-muted">Coffee?</a></li>
       <li class="nav-item"><a href="https://linktr.ee/studym8" class="nav-link px-2 text-muted">About</a></li>
     </ul>
