--- a/new_landingPage.html
+++ b/new_landingPage.html
@@ -8,10 +8,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
     <meta name="description" content="Simple but powerful study-assistance while browsing. Get definitions for whatever word you want within seconds, summarize up to 1000 words effortlessly, summarize text even more compact, turn text into bullet points and get text-answers to even complex problems. Try in demo and explore all of our functions to make your life easier!">
-    <meta name="keywords" content="StudyMateAI, studym8, studym8, studym8ai, studym8ai.app, Tom Sommerfeld, Gian Andri Hofmann, Tutorial, Download, 6 Different Study Functions, Definitions, Summarize, Flashcards, Text-answers, Try in Demo">
+    <meta name="keywords" content="StudyMateAI, studym8, studym8, studym8ai, dfuh18.github.io, Tom Sommerfeld, Gian Andri Hofmann, Tutorial, Download, 6 Different Study Functions, Definitions, Summarize, Flashcards, Text-answers, Try in Demo">
     <meta name="author" content="Gian Hofmann, Tom Sommerfeld"/>
     <meta name="copyright" content="© 2023 Gian Hofmann, Tom Sommerfeld"/>
-  <title>studym8ai.app</title>
+  <title>dfuh18.github.io</title>
   <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.webp"/>
   <!-- Link to Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -33,7 +33,7 @@
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="https://studym8ai.app/" class="nav-link px-2 link-secondary" id="currentpagelink">Home</a></li>
+                <li><a href="https://dfuh18.github.io/" class="nav-link px-2 link-secondary" id="currentpagelink">Home</a></li>
                 <li><a href="/download.html" class="nav-link px-2 link-dark" id="difpagelink">Download</a></li>
                 <li><a href="/tutorial.html" class="nav-link px-2 link-dark" id="difpagelink1">Tutorial</a></li>
                 <li><a href="/how_is_this_free.html" class="nav-link px-2 link-dark" id="difpagelink2">How is this free?</a></li>
@@ -233,16 +233,16 @@ function openExtension() {
        <i id="blogs-icon" class="fas fa-paragraph fa-2x"></i>
    </button>
     <ul class="dropdown-menu">
-        <li><a class="clean_links" href="https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html">Chat GPT's Introduction to StudyMateAI</a></li>
+        <li><a class="clean_links" href="https://dfuh18.github.io/chat_gpt_introduction_to_studymateai-article.html">Chat GPT's Introduction to StudyMateAI</a></li>
         <li><a class="clean_links" href="/articles/founder_story.html">Founder's Story</a></li>
     </ul>
 </div>
 
 <footer class="py-3 my-4">
     <ul class="nav justify-content-center pb-3 mb-3">
-      <li class="nav-item"><a href="https://studym8ai.app/tutorial.html" class="nav-link px-2 text-muted">Tutorial</a></li>
-      <li class="nav-item"><a href="https://studym8ai.app/download.html" class="nav-link px-2 text-muted">Download</a></li>
-      <li class="nav-item"><a href="https://studym8ai.app/how_is_this_free.html" class="nav-link px-2 text-muted">Privacy policy</a></li>
+      <li class="nav-item"><a href="https://dfuh18.github.io/tutorial.html" class="nav-link px-2 text-muted">Tutorial</a></li>
+      <li class="nav-item"><a href="https://dfuh18.github.io/download.html" class="nav-link px-2 text-muted">Download</a></li>
+      <li class="nav-item"><a href="https://dfuh18.github.io/how_is_this_free.html" class="nav-link px-2 text-muted">Privacy policy</a></li>
       <li class="nav-item"><a href="https://www.buymeacoffee.com/studyM8" class="nav-link px-2 text-muted">Coffee?</a></li>
       <li class="nav-item"><a href="https://linktr.ee/studym8" class="nav-link px-2 text-muted">About</a></li>
     </ul>
