--- a/on_install.html
+++ b/on_install.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width">
     <meta name="author" content="Gian Hofmann, Tom Sommerfeld"/>
     <meta name="copyright" content="© 2023 Gian Hofmann, Tom Sommerfeld"/>
-  <title>studym8ai.app/on_install</title>
+  <title>dfuh18.github.io/on_install</title>
   <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.webp"/>
   <!-- Link to Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -29,7 +29,7 @@
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="https://studym8ai.app/" class="nav-link px-2 link-dark" id="NOcurrentpagelink">Home</a></li>
+                <li><a href="https://dfuh18.github.io/" class="nav-link px-2 link-dark" id="NOcurrentpagelink">Home</a></li>
                 <li><a href="/download.html" class="nav-link px-2 link-dark" id="difpagelink">Download</a></li>
                 <li><a href="/tutorial.html" class="nav-link px-2 link-dark" id="difpagelink1">Tutorial</a></li>
                 <li><a href="/how_is_this_free.html" class="nav-link px-2 link-dark" id="difpagelink2">How is this free?</a></li>
@@ -113,7 +113,7 @@
       <p>This process requires your email and phonenumber.<br>This information is needed to verify that you are a real user. In return  you get a free 3-month trial 😎
       Don't worry you do not enter an subscription service after the free trial has ended! For
       details see: <a class="clean_links" href="https://openai.com/api/pricing/" target="_blank"><b>OpenAI Pricing</b></a> <br>
-      The service of StudyMateAI is completely free, learn more at: <a  class="clean_links" href="https://studym8ai.app/privacy_policy_app.html" target="_blank"><b>Privacy and Pricing</b></a></p>
+      The service of StudyMateAI is completely free, learn more at: <a  class="clean_links" href="https://dfuh18.github.io/privacy_policy_app.html" target="_blank"><b>Privacy and Pricing</b></a></p>
 
       <a class="btn btn-secondary" href="https://openai.com/api/pricing/" target="_blank">OpenAI Pricing</a>
     </div>
@@ -153,7 +153,7 @@
       <p>All that's left to do is copy and paste the key into <br>
         the StudyMateAI extension 🚀<br>
         If you have it installed just use <code>Ctrl+Shift+8</code></p>
-      <a class="btn btn-secondary" href="https://studym8ai.app/tutorial.html" target="_blank">Go to Tutorial</a>
+      <a class="btn btn-secondary" href="https://dfuh18.github.io/tutorial.html" target="_blank">Go to Tutorial</a>
     </div>
   </div>
   <!-- /.row -->
@@ -172,16 +172,16 @@
        <i id="blogs-icon" class="fas fa-paragraph fa-2x"></i>
    </button>
     <ul class="dropdown-menu">
-        <li><a class="clean_links" href="https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html" target="_blank">Chat GPT's Introduction to StudyMateAI</a></li>
+        <li><a class="clean_links" href="https://dfuh18.github.io/chat_gpt_introduction_to_studymateai-article.html" target="_blank">Chat GPT's Introduction to StudyMateAI</a></li>
         <li><a class="clean_links" href="/articles/founder_story.html" target="_blank" >Founder's Story</a></li>
     </ul>
 </div>
 
 <footer class="py-3 my-4">
     <ul class="nav justify-content-center  pb-3 mb-3">
-      <li class="nav-item"><a href="https://studym8ai.app/" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="https://studym8ai.app/tutorial.html" class="nav-link px-2 text-muted">Tutorial</a></li>
-      <li class="nav-item"><a href="https://studym8ai.app/how_is_this_free.html" class="nav-link px-2 text-muted">Privacy policy</a></li>
+      <li class="nav-item"><a href="https://dfuh18.github.io/" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="https://dfuh18.github.io/tutorial.html" class="nav-link px-2 text-muted">Tutorial</a></li>
+      <li class="nav-item"><a href="https://dfuh18.github.io/how_is_this_free.html" class="nav-link px-2 text-muted">Privacy policy</a></li>
       <li class="nav-item"><a href="https://www.buymeacoffee.com/studyM8" class="nav-link px-2 text-muted">Coffee?</a></li>
       <li class="nav-item"><a href="https://linktr.ee/studym8" class="nav-link px-2 text-muted">About</a></li>
     </ul>
