--- a/chat_gpt_introduction_to_studymateai-article.html
+++ b/chat_gpt_introduction_to_studymateai-article.html
@@ -37,7 +37,7 @@
                     </a>
         
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                        <li><a href="https://studym8ai.app/" class="nav-link px-2 link-dark" id="NOcurrentpagelink">Home</a></li>
+                        <li><a href="https://dfuh18.github.io/" class="nav-link px-2 link-dark" id="NOcurrentpagelink">Home</a></li>
                         <li><a href="/download.html" class="nav-link px-2 link-dark" id="difpagelink">Download</a></li>
                         <li><a href="/tutorial.html" class="nav-link px-2 link-dark" id="difpagelink1">Tutorial</a></li>
                         <li><a href="/how_is_this_free.html" class="nav-link px-2 link-dark" id="difpagelink2">How is this free?</a></li>
@@ -143,16 +143,16 @@
         </article>
         <!-- Share Links Footer-->
         <div class="text-center text-center-icons">
-            <a href="https://twitter.com/intent/tweet?url=https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html&text=Check out this article!" target="_blank" rel="noopener" class="social-icon">
+            <a href="https://twitter.com/intent/tweet?url=https://dfuh18.github.io/chat_gpt_introduction_to_studymateai-article.html&text=Check out this article!" target="_blank" rel="noopener" class="social-icon">
                 <i class="fab fa-twitter fa-2x"></i>
             </a>
-            <a href="https://www.facebook.com/sharer/sharer.php?u=https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html" target="_blank" rel="noopener" class="social-icon">
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://dfuh18.github.io/chat_gpt_introduction_to_studymateai-article.html" target="_blank" rel="noopener" class="social-icon">
                 <i class="fab fa-facebook fa-2x"></i>
             </a>
-            <a href="https://www.linkedin.com/shareArticle?url=https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html" target="_blank" rel="noopener" class="social-icon">
+            <a href="https://www.linkedin.com/shareArticle?url=https://dfuh18.github.io/chat_gpt_introduction_to_studymateai-article.html" target="_blank" rel="noopener" class="social-icon">
                 <i class="fab fa-linkedin fa-2x"></i>
             </a>
-            <a href="whatsapp://send?text=Check out this article! https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html" data-action="share/whatsapp/share" target="_blank" rel="noopener" class="social-icon">
+            <a href="whatsapp://send?text=Check out this article! https://dfuh18.github.io/chat_gpt_introduction_to_studymateai-article.html" data-action="share/whatsapp/share" target="_blank" rel="noopener" class="social-icon">
                 <i class="fab fa-whatsapp fa-2x"></i>
             </a>
         </div>
@@ -163,16 +163,16 @@
                  <i id="blogs-icon" class="fas fa-paragraph fa-2x"></i>
              </button>
               <ul class="dropdown-menu">
-                  <li><a class="clean_links" href="https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html">Chat GPT's Introduction to StudyMateAI</a></li>
+                  <li><a class="clean_links" href="https://dfuh18.github.io/chat_gpt_introduction_to_studymateai-article.html">Chat GPT's Introduction to StudyMateAI</a></li>
                   <li><a class="clean_links" href="/articles/founder_story.html">Founder's Story</a></li>
               </ul>
           </div>
 
             <footer class="py-3 my-4">
                 <ul class="nav justify-content-center  pb-3 mb-3">
-                  <li class="nav-item"><a href="https://studym8ai.app/" class="nav-link px-2 text-muted">Home</a></li>
-                  <li class="nav-item"><a href="https://studym8ai.app/tutorial.html" class="nav-link px-2 text-muted">Tutorial</a></li>
-                  <li class="nav-item"><a href="https://studym8ai.app/how_is_this_free.html" class="nav-link px-2 text-muted">Privacy policy</a></li>
+                  <li class="nav-item"><a href="https://dfuh18.github.io/" class="nav-link px-2 text-muted">Home</a></li>
+                  <li class="nav-item"><a href="https://dfuh18.github.io/tutorial.html" class="nav-link px-2 text-muted">Tutorial</a></li>
+                  <li class="nav-item"><a href="https://dfuh18.github.io/how_is_this_free.html" class="nav-link px-2 text-muted">Privacy policy</a></li>
                   <li class="nav-item"><a href="https://www.buymeacoffee.com/studyM8" class="nav-link px-2 text-muted">Coffee?</a></li>
                   <li class="nav-item"><a href="https://linktr.ee/studym8" class="nav-link px-2 text-muted">About</a></li>
                 </ul>
