--- a/privacy_policy_app.html
+++ b/privacy_policy_app.html
@@ -33,7 +33,7 @@
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="https://studym8ai.app/" class="nav-link px-2 link-dark" id="difpagelink1">Home</a></li>
+                <li><a href="https://dfuh18.github.io/" class="nav-link px-2 link-dark" id="difpagelink1">Home</a></li>
                 <li><a href="/download.html" class="nav-link px-2 link-dark" id="difpagelink">Download</a></li>
                 <li><a href="/tutorial.html" class="nav-link px-2 link-dark" id="difpagelink2">Tutorial</a></li>
                 <li><a href="/how_is_this_free.html" class="nav-link px-2 link-dark"  id="NOcurrentpagelink">How is this free?</a></li>
@@ -78,7 +78,7 @@
                         We understand the importance of data protection and privacy, and we want to assure you that we do not collect or share any user data. We appreciate your understanding and look forward to helping you study.  
                     
                     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                        <button type="button" class="btn btn-secondary btn-lg px-4 gap-3" onclick="window.open('https://studym8ai.app/download.html', '_self').focus()">Download</button>
+                        <button type="button" class="btn btn-secondary btn-lg px-4 gap-3" onclick="window.open('https://dfuh18.github.io/download.html', '_self').focus()">Download</button>
                         <button type="button" class="btn btn-outline-secondary btn-lg px-4" onclick="window.open('https://openai.com/about/', '_blank').focus()">Learn more about OpenAI</button>
                     </div>
                 </div>
@@ -93,15 +93,15 @@
          <i id="blogs-icon" class="fas fa-paragraph fa-2x"></i>
      </button>
       <ul class="dropdown-menu">
-          <li><a class="clean_links" href="https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html">Chat GPT's Introduction to StudyMateAI</a></li>
+          <li><a class="clean_links" href="https://dfuh18.github.io/chat_gpt_introduction_to_studymateai-article.html">Chat GPT's Introduction to StudyMateAI</a></li>
           <li><a class="clean_links" href="/articles/founder_story.html">Founder's Story</a></li>
       </ul>
   </div>
 
 <footer class="py-3 my-4">
     <ul class="nav justify-content-center  pb-3 mb-3">
-      <li class="nav-item"><a href="https://studym8ai.app/" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="https://studym8ai.app/tutorial.html" class="nav-link px-2 text-muted">Tutorial</a></li>
+      <li class="nav-item"><a href="https://dfuh18.github.io/" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="https://dfuh18.github.io/tutorial.html" class="nav-link px-2 text-muted">Tutorial</a></li>
       <li class="nav-item"><a href="https://www.buymeacoffee.com/studyM8" class="nav-link px-2 text-muted">Coffee?</a></li>
       <li class="nav-item"><a href="https://linktr.ee/studym8" class="nav-link px-2 text-muted">About</a></li>
     </ul>
