--- a/tutorial.html
+++ b/tutorial.html
@@ -321,7 +321,7 @@ With Singapore's strategic location being a favourable destination for high dema
          <i id="blogs-icon" class="fas fa-paragraph fa-2x"></i>
      </button>
       <ul class="dropdown-menu">
-          <li><a class="clean_links" href="https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html">Chat GPT's Introduction to StudyMateAI</a></li>
+          <li><a class="clean_links" href="https://dfuh18.github.io/chat_gpt_introduction_to_studymateai-article.html">Chat GPT's Introduction to StudyMateAI</a></li>
           <li><a class="clean_links" href="/articles/founder_story.html">Founder's Story</a></li>
       </ul>
   </div>
@@ -329,9 +329,9 @@ With Singapore's strategic location being a favourable destination for high dema
 
  <footer class="py-3 my-4">
     <ul class="nav justify-content-center  pb-3 mb-3">
-      <li class="nav-item"><a href="https://studym8ai.app/" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="https://studym8ai.app/tutorial.html" class="nav-link px-2 text-muted">Tutorial</a></li>
-      <li class="nav-item"><a href="https://studym8ai.app/how_is_this_free.html" class="nav-link px-2 text-muted">Privacy policy</a></li>
+      <li class="nav-item"><a href="https://dfuh18.github.io/" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="https://dfuh18.github.io/tutorial.html" class="nav-link px-2 text-muted">Tutorial</a></li>
+      <li class="nav-item"><a href="https://dfuh18.github.io/how_is_this_free.html" class="nav-link px-2 text-muted">Privacy policy</a></li>
       <li class="nav-item"><a href="https://www.buymeacoffee.com/studyM8" class="nav-link px-2 text-muted">Coffee?</a></li>
       <li class="nav-item"><a href="https://linktr.ee/studym8" class="nav-link px-2 text-muted">About</a></li>
     </ul>
